compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/completeFunctionArgumentsOfNestedCalls.fir.kt
package c

fun demo() {
    val bar = 51
    fun map(f : <!SYNTAX!><!SYNTAX!><!>fun<!>
    val foo = 3;
    bar <!INAPPLICABLE_CANDIDATE!>+<!> map { foo }
}